--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Site de Logs com Firebase</title>
+    <title>Site de Logs com Firebase - Sem GPS</title>
 
     <!-- Scripts do Firebase (versão compat) -->
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
@@ -10,10 +10,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
   </head>
   <body>
-    <h1>Logs de Visita</h1>
+    <h1>Logs de Visita (Sem Permissão de GPS)</h1>
     <p>
-      Exemplo de capturar país, cidade, dispositivo e browser, 
-      e salvar tudo no Firestore.
+      Esse site não pede permissão de GPS. Ele só obtém localização aproximada
+      via IP (país, cidade).
     </p>
 
     <script>
@@ -34,17 +34,13 @@
       const db = firebase.firestore();
 
       // ============== 2) DETECTAR BROWSER E DISPOSITIVO ============== //
-      // Vamos pegar algumas infos básicas do userAgent
       const userAgent = navigator.userAgent || "Desconhecido";
 
-      // Função simples para identificar se é mobile ou desktop
       let deviceType = "Desktop";
       if (/Mobi|Android|iPhone|iPad|iPod/i.test(userAgent)) {
         deviceType = "Mobile";
       }
 
-      // Para tentar captar marca/modelo, podemos usar regex bem simplificado.
-      // Ou, idealmente, usar uma lib como UAParser.js. Mas aqui vai um exemplo básico:
       let deviceBrand = "Desconhecido";
       if (/Samsung/i.test(userAgent)) {
         deviceBrand = "Samsung";
@@ -58,16 +54,12 @@
         deviceBrand = "Apple (Mac)";
       } else if (/Windows/i.test(userAgent)) {
         deviceBrand = "Windows";
-      } 
-      // Você pode melhorar esse trecho para outros fabricantes.
+      }
 
-      // Pegando o nome do navegador (bem simplificado)
       let browserName = "Desconhecido";
       if (userAgent.indexOf("Chrome") !== -1) {
         browserName = "Chrome";
       } else if (userAgent.indexOf("Safari") !== -1) {
-        // Note que todo Chrome no Android tb tem "Safari" no UA, 
-        // por isso a ordem das condições importa.
         browserName = "Safari";
       } else if (userAgent.indexOf("Firefox") !== -1) {
         browserName = "Firefox";
@@ -78,8 +70,9 @@
       }
 
       // ============== 3) PEGAR PAÍS E CIDADE (via IP) ============== //
-      // Usaremos a API pública ipapi.co
       function getIpLocationData() {
+        // Usamos a API pública ipapi.co. 
+        // Lembrando que existem limites de uso ou necessidade de chave.
         return fetch("https://ipapi.co/json/")
           .then(response => response.json())
           .then(data => {
@@ -102,55 +95,27 @@
           });
       }
 
-      // ============== 4) PEGAR GEOLOCATION (via navegador) ============== //
-      function getBrowserGeolocation() {
-        return new Promise((resolve) => {
-          if ("geolocation" in navigator) {
-            navigator.geolocation.getCurrentPosition(
-              (position) => {
-                resolve({
-                  lat: position.coords.latitude,
-                  lng: position.coords.longitude
-                });
-              },
-              () => {
-                // Se o usuário negar ou der erro, devolve nulo
-                resolve({ lat: null, lng: null });
-              }
-            );
-          } else {
-            // Se não tiver geolocalização
-            resolve({ lat: null, lng: null });
-          }
-        });
-      }
-
-      // ============== 5) REGISTRAR VISITA NO FIRESTORE ============== //
+      // ============== 4) REGISTRAR VISITA NO FIRESTORE ============== //
       async function registrarVisita() {
-        // Coleta as infos em paralelo
-        const [ipLocationData, browserGeo] = await Promise.all([
-          getIpLocationData(),
-          getBrowserGeolocation()
-        ]);
-
+        // Aqui só pegamos info do IP (sem GPS do navegador)
+        const ipLocationData = await getIpLocationData();
         const dataAtual = new Date();
 
-        // Monta o objeto que queremos salvar
         const visitaData = {
           data: dataAtual.toISOString(),
           ip: ipLocationData.ip,
           pais: ipLocationData.country,
           cidade: ipLocationData.city,
           regiao: ipLocationData.region,
-          latitude: browserGeo.lat,
-          longitude: browserGeo.lng,
+          // latitude e longitude ficam null por não usar geolocation
+          latitude: null,
+          longitude: null,
           dispositivo: deviceType,
           marcaModelo: deviceBrand,
           navegador: browserName,
-          userAgentCompleto: userAgent // se quiser guardar
+          userAgentCompleto: userAgent
         };
 
-        // Salva no Firestore, coleção "visitas"
         db.collection("visitas")
           .add(visitaData)
           .then((docRef) => {
@@ -161,7 +126,7 @@
           });
       }
 
-      // ============== 6) INICIAR O PROCESSO ============== //
+      // ============== 5) INICIAR O PROCESSO ============== //
       registrarVisita();
     </script>
   </body>
