--- a/index.html
+++ b/index.html
@@ -2,7 +2,35 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Site de Logs com Firebase - Sem GPS</title>
+    <title>Site com Vídeo e Logs (Apenas por IP)</title>
+
+    <style>
+      body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000; /* Fundo preto */
+      }
+      #videoContainer {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 100%;
+        max-height: 100%;
+      }
+      h1, p {
+        color: white;
+        text-align: center;
+      }
+    </style>
 
     <!-- Scripts do Firebase (versão compat) -->
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
@@ -10,11 +38,18 @@
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
   </head>
   <body>
-    <h1>Logs de Visita (Sem Permissão de GPS)</h1>
-    <p>
-      Esse site não pede permissão de GPS. Ele só obtém localização aproximada
-      via IP (país, cidade).
-    </p>
+    <div id="videoContainer">
+      <video
+        id="meuVideo"
+        src="img/videos.mp4"
+        loop
+        autoplay
+        muted
+      ></video>
+    </div>
+
+    <h1>Verbo da Vida Braga</h1>
+    <p>Praceta Beato Inácio de Azevedo 3</p>
 
     <script>
       // ============== 1) CONFIGURAR O FIREBASE ============== //
@@ -28,7 +63,6 @@
         measurementId: "G-HG530GGJRH"
       };
 
-      // Inicializa o Firebase
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
       const db = firebase.firestore();
@@ -71,18 +105,15 @@
 
       // ============== 3) PEGAR PAÍS E CIDADE (via IP) ============== //
       function getIpLocationData() {
-        // Usamos a API pública ipapi.co. 
-        // Lembrando que existem limites de uso ou necessidade de chave.
         return fetch("https://ipapi.co/json/")
           .then(response => response.json())
           .then(data => {
-            const locationData = {
+            return {
               ip: data.ip,
               city: data.city,
               region: data.region,
               country: data.country_name
             };
-            return locationData;
           })
           .catch(err => {
             console.error("Erro ao buscar dados de IP:", err);
@@ -97,8 +128,8 @@
 
       // ============== 4) REGISTRAR VISITA NO FIRESTORE ============== //
       async function registrarVisita() {
-        // Aqui só pegamos info do IP (sem GPS do navegador)
         const ipLocationData = await getIpLocationData();
+
         const dataAtual = new Date();
 
         const visitaData = {
@@ -107,9 +138,6 @@
           pais: ipLocationData.country,
           cidade: ipLocationData.city,
           regiao: ipLocationData.region,
-          // latitude e longitude ficam null por não usar geolocation
-          latitude: null,
-          longitude: null,
           dispositivo: deviceType,
           marcaModelo: deviceBrand,
           navegador: browserName,
@@ -126,8 +154,18 @@
           });
       }
 
-      // ============== 5) INICIAR O PROCESSO ============== //
+      // ============== 5) INICIAR PROCESSO (assim que a página carregar) ============== //
       registrarVisita();
+
+      // ============== 6) CONTROLAR O VÍDEO POR CLIQUE ============== //
+      const meuVideo = document.getElementById("meuVideo");
+      meuVideo.addEventListener("click", () => {
+        if (meuVideo.paused) {
+          meuVideo.play();
+        } else {
+          meuVideo.pause();
+        }
+      });
     </script>
   </body>
 </html>
