--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Site com Vídeo e Logs (Apenas por IP)</title>
+    <title>Verbo Da Vida Braga Jovens</title>
+
+    <link rel="icon" type="image/png" href="img/logo-verboo.png">
 
     <style>
       body, html {
