--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
         max-width: 100%;
         max-height: 100%;
       }
-      h1, p {
+      h1 {
         color: white;
         text-align: center;
+        font-size: 3vw;
+      }
+      p{
+        color: white;
+        text-align: center;
+        font-size: 1.5vw;
       }
     </style>
 
@@ -46,7 +52,7 @@
         src="img/videos.mp4"
         loop
         autoplay
-        muted
+        controls
       ></video>
     </div>
 
@@ -161,11 +167,17 @@
 
       // ============== 6) CONTROLAR O VÍDEO POR CLIQUE ============== //
       const meuVideo = document.getElementById("meuVideo");
+
+      // Configura o vídeo para começar com som
+      meuVideo.muted = false;
+
       meuVideo.addEventListener("click", () => {
         if (meuVideo.paused) {
           meuVideo.play();
+          meuVideo.muted = false; // Garante que o som esteja ligado quando o vídeo começar
         } else {
           meuVideo.pause();
+          meuVideo.muted = true; // Quando o vídeo for pausado, o som é desligado
         }
       });
     </script>
