--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
         max-width: 100%;
         max-height: 100%;
       }
-      h1 {
+      h1, p {
         color: white;
         text-align: center;
-        font-size: 3vw;
-      }
-      p{
-        color: white;
-        text-align: center;
-        font-size: 1.5vw;
       }
     </style>
 
@@ -44,6 +38,9 @@
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-analytics-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
+
+    <!-- Configuração externa do Firebase -->
+    <script src="config.js"></script>
   </head>
   <body>
     <div id="videoContainer">
@@ -52,7 +49,7 @@
         src="img/videos.mp4"
         loop
         autoplay
-        controls
+        muted
       ></video>
     </div>
 
@@ -60,126 +57,27 @@
     <p>Praceta Beato Inácio de Azevedo 3</p>
 
     <script>
-      // ============== 1) CONFIGURAR O FIREBASE ============== //
-      const firebaseConfig = {
-        apiKey: "AIzaSyBDhQTXd2UT2Rhpj7ZDXkztgkFcj7cbndU",
-        authDomain: "verbo-braga-jovens.firebaseapp.com",
-        projectId: "verbo-braga-jovens",
-        storageBucket: "verbo-braga-jovens.firebasestorage.app",
-        messagingSenderId: "1047639862875",
-        appId: "1:1047639862875:web:e2f36568c282db1188197e",
-        measurementId: "G-HG530GGJRH"
-      };
-
+      // Inicializar Firebase
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
       const db = firebase.firestore();
 
-      // ============== 2) DETECTAR BROWSER E DISPOSITIVO ============== //
-      const userAgent = navigator.userAgent || "Desconhecido";
-
-      let deviceType = "Desktop";
-      if (/Mobi|Android|iPhone|iPad|iPod/i.test(userAgent)) {
-        deviceType = "Mobile";
-      }
-
-      let deviceBrand = "Desconhecido";
-      if (/Samsung/i.test(userAgent)) {
-        deviceBrand = "Samsung";
-      } else if (/iPhone/i.test(userAgent)) {
-        deviceBrand = "iPhone";
-      } else if (/Huawei/i.test(userAgent)) {
-        deviceBrand = "Huawei";
-      } else if (/Xiaomi/i.test(userAgent)) {
-        deviceBrand = "Xiaomi";
-      } else if (/Macintosh/i.test(userAgent) && deviceType === "Desktop") {
-        deviceBrand = "Apple (Mac)";
-      } else if (/Windows/i.test(userAgent)) {
-        deviceBrand = "Windows";
-      }
-
-      let browserName = "Desconhecido";
-      if (userAgent.indexOf("Chrome") !== -1) {
-        browserName = "Chrome";
-      } else if (userAgent.indexOf("Safari") !== -1) {
-        browserName = "Safari";
-      } else if (userAgent.indexOf("Firefox") !== -1) {
-        browserName = "Firefox";
-      } else if (userAgent.indexOf("MSIE") !== -1 || userAgent.indexOf("Trident") !== -1) {
-        browserName = "Internet Explorer";
-      } else if (userAgent.indexOf("Edg") !== -1) {
-        browserName = "Edge";
-      }
-
-      // ============== 3) PEGAR PAÍS E CIDADE (via IP) ============== //
-      function getIpLocationData() {
-        return fetch("https://ipapi.co/json/")
-          .then(response => response.json())
-          .then(data => {
-            return {
-              ip: data.ip,
-              city: data.city,
-              region: data.region,
-              country: data.country_name
-            };
-          })
-          .catch(err => {
-            console.error("Erro ao buscar dados de IP:", err);
-            return {
-              ip: null,
-              city: null,
-              region: null,
-              country: null
-            };
-          });
-      }
-
-      // ============== 4) REGISTRAR VISITA NO FIRESTORE ============== //
+      // Função para registrar visita
       async function registrarVisita() {
-        const ipLocationData = await getIpLocationData();
-
+        const userAgent = navigator.userAgent || "Desconhecido";
         const dataAtual = new Date();
-
         const visitaData = {
           data: dataAtual.toISOString(),
-          ip: ipLocationData.ip,
-          pais: ipLocationData.country,
-          cidade: ipLocationData.city,
-          regiao: ipLocationData.region,
-          dispositivo: deviceType,
-          marcaModelo: deviceBrand,
-          navegador: browserName,
-          userAgentCompleto: userAgent
+          navegador: userAgent,
         };
 
         db.collection("visitas")
           .add(visitaData)
-          .then((docRef) => {
-            console.log("Visita registrada com ID:", docRef.id);
-          })
-          .catch((error) => {
-            console.error("Erro ao registrar visita:", error);
-          });
+          .then(() => console.log("Visita registrada com sucesso!"))
+          .catch((err) => console.error("Erro ao registrar visita:", err));
       }
 
-      // ============== 5) INICIAR PROCESSO (assim que a página carregar) ============== //
       registrarVisita();
-
-      // ============== 6) CONTROLAR O VÍDEO POR CLIQUE ============== //
-      const meuVideo = document.getElementById("meuVideo");
-
-      // Configura o vídeo para começar com som
-      meuVideo.muted = false;
-
-      meuVideo.addEventListener("click", () => {
-        if (meuVideo.paused) {
-          meuVideo.play();
-          meuVideo.muted = false; // Garante que o som esteja ligado quando o vídeo começar
-        } else {
-          meuVideo.pause();
-          meuVideo.muted = true; // Quando o vídeo for pausado, o som é desligado
-        }
-      });
     </script>
   </body>
 </html>
