--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-analytics-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
+    
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <div id="videoContainer">
