--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div id="videoContainer">
       <video
         id="meuVideo"
-        src="img/VID.mp4"
+        src="img/video.mp4"
         loop
         autoplay
       ></video>
