--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        padding: 0 0 50px 0; /* Adiciona espaço na parte inferior */
+       /* padding: 0 0 50px 0; /* Adiciona espaço na parte inferior */
         background-color: #000; /* Fundo preto */
         margin-bottom: 10px;
       }
@@ -114,9 +114,6 @@
       ></video>
       <button id="playButton">▶</button>
     </div>
-
-    <h1>Verbo da Vida Braga</h1>
-    <p>Praceta Beato Inácio de Azevedo 3</p>
 
     <script>
       // ============== 1) CONFIGURAR O FIREBASE ============== //
